test/spec_vectors/i32/fail/module_26.wat
(module (func $type-binary-2nd-operand-empty-in-if (i32.const 0) (i32.const 0) (if (i32.const 0) (then (i32.add)) (else (drop)))))